[package]
name = "mycorrhiza_common"
version = "0.1.0"
edition = "2024"

# Feature definitions
[features]
default = []
all = [
    "s3",
    "aide",
    "otel",
    "tasks",
    "llm",
    "rkyv"
]
s3 = [
    "dep:aws-sdk-s3",
    "dep:aws-config"
]
aide = [
    "dep:aide",
    "axum"
]
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-stdout",
    "dep:axum-tracing-opentelemetry",
    "dep:init-tracing-opentelemetry",
    "dep:hostname",
    "axum"
]
tasks = [
    "dep:async-trait",
    "aide"
]
llm = []
rkyv = [
    "dep:rkyv"
]
axum = [
    "dep:axum",
    "dep:tower-http"
]

[dependencies]

# Always active dependencies
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.121"
chrono = { version = "0.4.39", features = ["now", "serde"] }
blake2 = "0.10.6"
base64 = "0.22.1"
anyhow = "1.0.98"
hex = "0.4.3"
rand_core = "0.9.3"
rand = "0.9.1"
thiserror = "2.0.12"
hyper = "1.6.0"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
urlencoding = "2.1.3"
serde_with = "3.14.0"
schemars = { version = "0.9", features = ["chrono04", "uuid1"]}
reqwest = { version = "0.12.5", features = ["json"]}

# Optional dependencies
aws-sdk-s3 = { version = "1.85.0", optional = true }
aws-config = { version = "1.6.2", optional = true }
axum = { version = "0.8.4", optional = true }
aide = { version = "0.15", features = ["axum", "axum-extra", "axum-extra-query", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "macros", "swagger"], optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }
opentelemetry = { version = "0.30.0", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"], optional = true }
opentelemetry-stdout = { version = "0.30.0", optional = true }
axum-tracing-opentelemetry = { version = "0.29.0", optional = true }
init-tracing-opentelemetry = { version = "0.30.0", features = ["tracing_subscriber_ext"], optional = true }
hostname = { version = "0.4.1", optional = true }
async-trait = { version = "0.1.88", optional = true }
tower-http = { version = "0.6.6", features = ["cors"], optional = true }
rkyv = { version = "0.8.11", features = ["aligned", "alloc"], optional = true }
